fixed height issue in styles.scss causing extra padding in banner

--- a/BasicAngular/src/styles.scss
+++ b/BasicAngular/src/styles.scss
@@ -12,7 +12,7 @@ body, html {
     display: inline-block;
     margin-left: auto;
     margin-right: auto;
-    height: 374.281px;
+    // height: 374.281px;
     width: 100%;
     // opacity: .6;
   }
